# FaceRecon

./: .gitmodules  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  Rendszerterv.docx  vcpkg.json
FaceReconDesktop/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  NeuralNetwork.cpp  main.cpp
FaceReconServer/: CMakeLists.txt  Data.h  ServerBackend.cpp  ServerBackend.h  main.cpp
common_libraries/: CMakeLists.txt
common_libraries/include/: FaceImageEvaluator.h  NeuralNetwork.h  ThreadSafeFaceImageEvaluator.h  ThreadSafeNeuralNetwork.h  utilities.h
common_libraries/src/: FaceImageEvaluator.cpp  ThreadSafeFaceImageEvaluator.cpp  ThreadSafeNeuralNetwork.cpp  utilities.cpp
scripts/: build.sh  create_package.sh
web/: main.html
web/templates/: index.html
